src/objects/Business_Development_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>BD_Snap_Account__c</fullName>
        <label>Account</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Snap_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BD_Snap_Customer_Status__c</fullName>
        <label>Customer Status</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Snap_L4_Act__c</fullName>
        <label>L4 Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_Snap_Lead_Originator_Mgr__c</fullName>
        <label>Lead Originator Mgr</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Snap_Lead_Originator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Originator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Development_Snapshots1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Snap_Manager_Lvl_1__c</fullName>
        <label>Manager (Lvl 1)</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Snap_N4_Fcst__c</fullName>
        <label>N4 Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_Snap_N4_Pipe__c</fullName>
        <label>N4 Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_Snap_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Business Development Snapshots</relationshipLabel>
        <relationshipName>Business_Development_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Snap_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Development_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Snap_Quality__c</fullName>
        <label>Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BD_Snap_Stage__c</fullName>
        <label>Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Business Development Snapshot</label>
    <nameField>
        <displayFormat>BD-{000000000}</displayFormat>
        <label>Business Development Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Development Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>